# Snake-DeepLearning

./: README.md  pyproject.toml
snake_deeplearning/: feed_forward_neural_network.py  game.py  genetic_algorithm.py  training_data_generator.py
tests/: test_snake_deeplearning.py
