[tool.poetry]
name = "Snake-DeepLearning"
version = "0.1.0"
description = ""
authors = ["Kir Chou"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"
keras = "^2.3.1"
tensorflow = "^2.1.0"
tensorflow-estimator = "2.1"
# See README.md, pygame should be installed manually
# pygame = "^1.9.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
game = "snake_deeplearning.game:main"
generate_data = "snake_deeplearning.training_data_generator:main_generate_data"
generate_model = "snake_deeplearning.training_data_generator:main_generate_model"
test_model = "snake_deeplearning.training_data_generator:main_apply_model"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
